# project-stockholm

./: .gitignore  Current Implementation Summary.md  README.md  app.py  docker-compose.yml  generate_test_docs.py  llm_processor.py  prompts.py  render.yaml  requirements.txt  utils.py
.cursor/rules/: backend_rules.mdc  techstack.mdc
backend/: Dockerfile  main.py  pyproject.toml
backend/models/: schemas.py
backend/routers/: chronology.py
backend/src/: __init__.py  chronology_generator.py  llm_processor.py  prompts.py
backend/tests/: test_integration.py  test_llm_processor.py  test_pdf_generation.py
backend/utils/: file_processor.py
documentation/: Product Requirements Document  overview.md
frontend/: Dockerfile  main.py  pyproject.toml
frontend/utils/: __init__.py  file_processor.py
test_data/: RESIDENTIAL RENTAL AGREEMENT.docx  SOFTWARE DEVELOPMENT AGREEMENT.docx
