[tool.poetry]
name = "project-stockholm-backend"
version = "0.1.0"
description = "Backend for Project Stockholm"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}, {include = "routers"}, {include = "models"}, {include = "utils"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
google-generativeai = "0.3.2"
python-dotenv = "1.0.1"
helicone = "1.0.13"
PyPDF2 = "3.0.1"
Pillow = "10.4.0"
fpdf2 = "2.7.8"
dateparser = "1.1.8"
pydantic = "^2.0"
google-genai = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py39" 